--- a/views/Mantenedores/Tarifa/Troncal/historial.html
+++ b/views/Mantenedores/Tarifa/Troncal/historial.html
@@ -5,7 +5,7 @@
         <li><a href="javascript:;">Mantenedores</a></li>
         <li><a href="javascript:;">Tarifa</a></li>
         <li><a href="javascript:;">Troncal</a></li>
-        <li class="active">40503 - Tabla Historial</li>
+        <li class="active">Tabla Historial</li>
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
@@ -30,25 +30,6 @@
 
                 <div class="panel-body">
                     <form class="form-horizontal">
-
-                        <div class="form-group">
-                            <label class="col-md-3 control-label"> N° Tarifa </label>
-                            <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="" ng-model="prov_razon_social" />
-                            </div>
-                            <label class="col-md-2 control-label">Tipo de Cobro</label>
-                            <div class="col-md-2">
-                                <select class="form-control">
-                                    <option>Todos</option>
-                                    <option>1 - Parcializada</option>
-                                    <option>2 - Completa </option>
-                                </select>
-                            </div>
-                        </div>
-
-
-
-
                         <div class="form-group">
                             <label class="col-md-3 control-label">Proveedor</label>
                             <div class="col-md-2">
