--- a/views/Mantenedores/Tarifa/Troncal/agregar.html
+++ b/views/Mantenedores/Tarifa/Troncal/agregar.html
@@ -9,7 +9,7 @@
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Tarifa SEV<small> Gestión de Mantenedores</small></h1>
+    <h1 class="page-header">Tarifa MOD<small> Gestión de Mantenedores</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
@@ -34,12 +34,18 @@
                             <label class="col-md-3 control-label">Tipo Viaje</label>
                             <div class="col-md-2">
                                 <select class="form-control">
-                                    <option>SEV</option>
+                                    <option>MOD</option>
                                     <option>sadfasdf</option>
                                 </select>
                             </div>
                         
-                           
+                            <label class="col-md-3 control-label">Origen</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>55 - CD - SANTIAGO</option>
+                                    <option>59 - CD - ANTOFAGASTA</option>
+                                </select>
+                            </div>
 							
                         </div>
 						
@@ -53,26 +59,19 @@
                                     <option>Otro</option>
                                 </select>
                             </div>
-							
-                        </div>
-						<div class="form-group">							
-                            <label class="col-md-3 control-label">Tipo de Servicio</label>
+							 <label class="col-md-3 control-label">Estado</label>
                             <div class="col-md-2">
                                 <select class="form-control">
-                                    <option>1 - Grua</option>
-                                    <option>2 - Escolta</option>
-
+                                    <option>HABILITADA</option>
+                                    <option>2 Transportes Pipau</option>
+                                    <option>3 Transportes del Pacifico</option>
+                                    <option>Otro</option>
                                 </select>
                             </div>
                         </div>
-						<div class="form-group">
-							<label class="col-md-3 control-label">Valor</label>
-                            <div class="col-md-2">
-                                <input type="number" class="form-control" placeholder="" />
-                            </div>
-						</div>
-                        
-						<div class="form-group">
+						
+						
+                        <div class="form-group">
                             <label class="col-md-3 control-label">Fecha de Inicio</label>
                             <div class="col-md-2">
                                 <p class="input-group">
@@ -93,17 +92,27 @@
                                 </p>
                             </div>
                         </div>
-						<div class="form-group">
-							<label class="col-md-3 control-label">Estado</label>
+						
+					
+
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Tipo de Vehiculo</label>
                             <div class="col-md-2">
                                 <select class="form-control">
-                                    <option>HABILITADA</option>
-                                    <option>2 Transportes Pipau</option>
-                                    <option>3 Transportes del Pacifico</option>
-                                    <option>Otro</option>
+                                    <option>1 - CM35</option>
+                                    <option>2 - CM40</option>
+
                                 </select>
                             </div>
+							
+							<label class="col-md-3 control-label">Valor</label>
+                            <div class="col-md-2">
+                                <input type="number" class="form-control" placeholder="" />
+                            </div>
+                            
                         </div>
+						
+						
 						
                         <div class="form-group">
                             <label class="col-md-3 control-label">Acciones : </label>
