--- a/views/Mantenedores/Tarifa/Troncal/consulta.html
+++ b/views/Mantenedores/Tarifa/Troncal/consulta.html
@@ -4,12 +4,12 @@
         <li><a ui-sref="app.dashboard">Home</a></li>
         <li><a href="javascript:;">Mantenedores</a></li>
         <li><a href="javascript:;">Tarifa</a></li>
-        <li><a href="javascript:;">SEV</a></li>
+        <li><a href="javascript:;">MOD</a></li>
         <li class="active">40501 - Crear</li>
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Tarifa SEV<small> Gestión de Mantenedores</small></h1>
+    <h1 class="page-header">Tarifa MOD<small> Gestión de Mantenedores</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
@@ -34,13 +34,18 @@
                             <label class="col-md-3 control-label">Tipo Viaje</label>
                             <div class="col-md-2">
                                 <select class="form-control">
-                                    <option>SEV</option>
+                                    <option>MOD</option>
                                     <option>sadfasdf</option>
                                 </select>
                             </div>
                         
-                           
-						   
+                            <label class="col-md-3 control-label">Origen</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>55 - CD - SANTIAGO</option>
+                                    <option>59 - CD - ANTOFAGASTA</option>
+                                </select>
+                            </div>
 							
                         </div>
 						
@@ -54,22 +59,19 @@
                                     <option>Otro</option>
                                 </select>
                             </div>
-							
-							
-                        </div>
-						
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">Tipo de Servicio</label>
+							 <label class="col-md-3 control-label">Estado</label>
                             <div class="col-md-2">
                                 <select class="form-control">
-									<option>GRU - Grua</option>
-                                    <option>SOB - Sobre Estadia</option>
+                                    <option>HABILITADA</option>
+                                    <option>2 Transportes Pipau</option>
+                                    <option>3 Transportes del Pacifico</option>
+                                    <option>Otro</option>
                                 </select>
                             </div>
-		
                         </div>
 						
-						<div class="form-group">
+						
+                        <div class="form-group">
                             <label class="col-md-3 control-label">Fecha de Inicio</label>
                             <div class="col-md-2">
                                 <p class="input-group">
@@ -91,20 +93,23 @@
                             </div>
                         </div>
 						
-						<div class="form-group">
+					
+
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Tipo de Vehiculo</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>1 - CM35</option>
+                                    <option>2 - CM40</option>
+
+                                </select>
+                            </div>
+							
 							<label class="col-md-3 control-label">Valor</label>
                             <div class="col-md-2">
                                 <input type="number" class="form-control" placeholder="" />
                             </div>
-                            <label class="col-md-3 control-label">Estado</label>
-                            <div class="col-md-2">
-                                <select class="form-control">
-                                    <option>HABILITADA</option>
-                                    <option>2 Transportes Pipau</option>
-                                    <option>3 Transportes del Pacifico</option>
-                                    <option>Otro</option>
-                                </select>
-                            </div>
+                            
                         </div>
 						
                         <div class="form-group">
@@ -135,10 +140,10 @@
                     <table id="data-table" class="table table-striped table-bordered">
                         <thead>
                         <tr>
-                            <th>Tipo Servicio</th>
-                            <!-- <th>Origen</th> -->
+                            <th>Tipo Viaje</th>
+                            <th>Origen</th>
                             <!-- <th>Destino</th> -->
-                            <!-- <th>Tipo Vehiculo</th> -->
+                            <th>Tipo Vehiculo</th>
 							<!-- <th>Metodo</th> -->
 							<th>Transportista</th>
 							<!-- <th>NS</th> -->
@@ -149,23 +154,35 @@
                         </thead>
                         <tbody>
                         <tr class="odd gradeX">
-                            <td>Grua</td>
-                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>MOD</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <!-- <td>45 CONCEPCIÓN</td> -->
+                            <td>CM40</td>
+							<!-- <td>1</td> -->
+							<td>TRANSPORTES DEL PACIFICO</td>
 							<!-- <td>0.95</td> -->
-                            <td>60,500</td>
+                            <td>360,500</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td>Sobre-Estadia</td>
-                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>MOD</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <!-- <td>45 CONCEPCIÓN</td> -->
+                            <td>CM30</td>
+							<!-- <td>1</td> -->
+							<td>TRANSPORTES DEL PACIFICO</td>
 							<!-- <td>0.95</td> -->
-                            <td>60,500</td>
+                            <td>260,500</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr><tr class="odd gradeX">
-                            <td>Escolta</td>
-                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>MOD</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <!-- <td>45 CONCEPCIÓN</td> -->
+                            <td>CM20</td>
+							<!-- <td>1</td> -->
+							<td>TRANSPORTES DEL PACIFICO</td>
 							<!-- <td>0.95</td> -->
-                            <td>30,500</td>
+                            <td>60,500</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         </tbody>
