--- a/views/B2B/Transportista/b2b_factura.html
+++ b/views/B2B/Transportista/b2b_factura.html
@@ -90,6 +90,17 @@
                             </div>
 						</div>
 
+						<div class="form-group">
+							<label class="col-md-3 control-label">Estado OF</label>
+                           <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>00 CD- SANTIAGO</option>
+                                </select>
+                            </div>
+							
+						</div>
+						
                         <div class="form-group">
                             <label class="col-md-3 control-label">Acciones:</label>
                             <div class="col-md-9">
