--- a/views/Consulta/Tarifa/troncal.html
+++ b/views/Consulta/Tarifa/troncal.html
@@ -2,7 +2,7 @@
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
-        <li><a href="javascript:;">Consukta</a></li>
+        <li><a href="javascript:;">Consulta</a></li>
         <li><a href="javascript:;">Tarifa</a></li>
         <li class="active">10401 - Troncal</li>
     </ol>
@@ -136,8 +136,8 @@
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">2</a></td>
                             <td>TRANSPORTES DEL PACIFICO</td>
-                            <td>12-MAR-17</td>
-                            <td>12-MAR-18</td>
+                            <td>12-03-17</td>
+                            <td>12-03-18</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
                             <td>CM40</td>
@@ -150,8 +150,8 @@
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">3</a></td>
                             <td>TRANSPORTES PIPAU</td>
-                            <td>9-MAR-17</td>
-                            <td>10-MAR-18</td>
+                            <td>09-03-17</td>
+                            <td>10-03-18</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>17 TI-TALCA</td>
                             <td>CM50</td>
@@ -164,8 +164,8 @@
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">4</a></td>
                             <td>TRANSPORTES ALCANTARA</td>
-                            <td>9-SEP-16</td>
-                            <td>10-FEB-17</td>
+                            <td>09-09-16</td>
+                            <td>10-02-17</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>15 ARICA</td>
                             <td>CM40</td>
@@ -178,8 +178,8 @@
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">5</a></td>
                             <td>TRANSPORTES PIPAU</td>
-                            <td>9-SEP-16</td>
-                            <td>10-AUG-17</td>
+                            <td>09-09-16</td>
+                            <td>10-08-17</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>14 PUERTO MONTT</td>
                             <td>CM40</td>
@@ -192,8 +192,8 @@
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">6</a></td>
                             <td>TRANSPORTES DEL PACIFICO</td>
-                            <td>31-JAN-17</td>
-                            <td>1-AUG-17</td>
+                            <td>31-01-17</td>
+                            <td>01-08-17</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>36 ANTOFAGASTA</td>
                             <td>CM40</td>
