--- a/views/Consulta/Viajes/det_ddc.html
+++ b/views/Consulta/Viajes/det_ddc.html
@@ -51,7 +51,7 @@
                             </div>
                         </div>
 						
-						 <div class="form-group">
+						<div class="form-group">
                             <label class="col-md-3 control-label">Usuario Objeta</label>
                             <div class="col-md-2">
                                 <input type="text" class="form-control" placeholder="José Pérez" />
@@ -70,7 +70,24 @@
                             
                         </div>
                         
-                       
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Patente</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="CPPL-54" />
+                            </div>
+                            <label class="col-md-2 control-label">Conductor</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="José Pérez" />
+                            </div>
+                        </div>
+						
+						<div class="form-group">
+                            <label class="col-md-3 control-label">MC</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="450150" />
+                            </div>
+                           
+                        </div>
 
                        
                     </form>
@@ -100,7 +117,11 @@
                             <th>Estado Boleta</th>
                             <th>ND</th>
                             <th>Estado ND</th>
-                            <th>Tarifa</th>
+                            <th>Tarifa Base</th>
+							<th>Localidad</th>
+							<th>Categoria</th>
+							<th>Guia</th>
+							
 							<th></th>
                         </tr>
                         </thead>
@@ -111,6 +132,9 @@
 							<td>5050</td>
                             <td>Entregado</td>
                             <td><input type="text" class="form-control" placeholder="5.990" /></td>
+							<td>45 Concepcion</td>
+							<td>Pequeño</td>
+                            <td>456456</td>
 							<td><input type="checkbox" value="es"> </td>
                         </tr>
 						<tr class="odd gradeX">
@@ -126,7 +150,10 @@
                             <td>Cerrada</td>
 							<td>5052</td>
                             <td>Entregado</td>
-                            <td><input type="text" class="form-control" placeholder="5.990" /></td>
+                            <td><input type="text" class="form-control" placeholder="3.990" /></td>
+							<td>45 Concepcion</td>
+							<td>Pequeño</td>
+                            <td>456457</td>
 							<td><input type="checkbox" value="es"> </td>
                         </tr>
 						<tr class="odd gradeX">
@@ -135,6 +162,9 @@
 							<td>5053</td>
                             <td>Entregado</td>
                             <td><input type="text" class="form-control" placeholder="3.990" /></td>
+							<td>45 Concepcion</td>
+							<td>Pequeño</td>
+                            <td>456458</td>
 							<td><input type="checkbox" value="es"> </td>
                         </tr>
                         
