--- a/views/Consulta/Viajes/det_troncal_original.html
+++ b/views/Consulta/Viajes/det_troncal_original.html
@@ -8,7 +8,7 @@
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Detalle Viaje Movil Diario <small>Gestión de Consultas</small></h1>
+    <h1 class="page-header">Detalle Viaje Troncal <small>Gestión de Consultas</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
@@ -24,7 +24,7 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Viaje Movil Diario</h4>
+                    <h4 class="panel-title">Viaje Troncal</h4>
                 </div>
 
                 <div class="panel-body">
@@ -61,8 +61,8 @@
                                 <input type="text" class="form-control" placeholder="20/03/2017" />
                             </div>
                         </div>
-						
-						 <div class="form-group" style="display:none;" >
+
+                        <div class="form-group">
                             <label class="col-md-3 control-label">Usuario Objeta</label>
                             <div class="col-md-2">
                                 <input type="text" class="form-control" placeholder="José Pérez" />
@@ -73,30 +73,12 @@
                             </div>
                         </div>
 
-						<div class="form-group" style="display:none;" >
+						<div class="form-group">
                             <label class="col-md-3 control-label">Observaci&oacute;n Objeci&oacute;n</label>
                             <div class="col-md-6">
                                 <input type="text" class="form-control" placeholder="Se obejeto porque sí, autoriza E.Saavedra." />
                             </div>
                             
-                        </div>
-						
-						<div class="form-group">
-                            <label class="col-md-3 control-label">Estado Viaje</label>
-                            <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="ESPERANDO CARGA" />
-                            </div>
-                            <label class="col-md-2 control-label">Patente</label>
-                            <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="CPPL-54" />
-                            </div>
-                        </div>
-                        
-						<div class="form-group">
-                            <label class="col-md-3 control-label">Tipo Viaje</label>
-                            <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="MOD" />
-                            </div>
                         </div>
                     </form>
                 </div>
@@ -126,8 +108,7 @@
                             <th>Origen</th>
                             <th>Destino</th>
                             <th>Fecha MC</th>
-							
-							<th>Fecha_Viaje</th>
+							<th></th>
                         </tr>
                         </thead>
                         <tbody>
@@ -137,8 +118,8 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
                             <td>20/03/2017</td>
-<!-- <td><input type="checkbox" value="es"> </td> -->
-							<td>20/03/2017</td>
+							<td><input type="checkbox" value="es"> </td>
+
                         </tr>
 						<tr class="odd gradeX">
                             <td>10022</td>
@@ -146,7 +127,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>40 TALCA</td>
                             <td>20/03/2017</td>
-							<td>20/03/2017</td>
+<td><input type="checkbox" value="es"> </td>
                         </tr>
 						<tr class="odd gradeX">
                             <td>10023</td>
@@ -154,7 +135,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
                             <td>20/03/2017</td>
-							<td>20/03/2017</td>
+<td><input type="checkbox" value="es"> </td>
                         </tr>
 						<tr class="odd gradeX">
                             <td>10024</td>
@@ -162,7 +143,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
                             <td>20/03/2017</td>
-							<td>20/03/2017</td>
+<td><input type="checkbox" value="es"> </td>
                         </tr>
                         
                         </tbody>
