--- a/views/Consulta/Supervisor/umilla.html
+++ b/views/Consulta/Supervisor/umilla.html
@@ -1,1 +1,164 @@
-umilla supervisor
+<div ng-controller="B2B_Fact_Obje_Resp_Controller">
+    <!-- begin breadcrumb -->
+    <ol class="breadcrumb pull-right">
+        <li><a href="javascript:;">Home</a></li>
+        <li><a href="javascript:;">B2B</a></li>
+        <!-- <li><a href="javascript:;">Consulta Facturación</a></li> -->
+        <li class="active">Planificacion</li>
+    </ol>
+    <!-- end breadcrumb -->
+    <!-- begin page-header -->
+    <h1 class="page-header">Facturación <small>Gestión de B2B</small></h1>
+    <!-- end page-header -->
+
+    <!-- begin row -->
+    <div class="row">
+
+        <div class="col-md-12">
+			 <!-- begin panel -->
+            <div class="panel panel-inverse" data-sortable-id="form-stuff-1">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Carga Archivo Planificacion</h4>
+                </div>
+                <div class="panel-body">
+                    <form class="form-horizontal">
+
+						<div class="form-group">
+							<label class="col-md-3 control-label">Carga Archivo</label>
+							<div class="col-md-3 control-label">
+								<input ng-model='file' type="file"/>
+							</div>
+							<div class="col-md-3">
+								<button type="submit" class="btn btn-sm btn-success" ng-click = "">Cargar</button>
+							</div>
+						</div>
+
+                    </form>
+                </div>
+            </div>
+            <!-- end panel -->
+		
+		
+		
+		
+            <!-- begin panel -->
+            <div class="panel panel-inverse">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Consulta Planificaci&oacute;n </h4>
+                </div>
+
+                <div class="panel-body">
+                    <form class="form-horizontal">
+						 <div class="form-group">
+                            <label class="col-md-3 control-label">Tipo Orden</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>00 CD- SANTIAGO</option>
+                                </select>
+                            </div>
+                            <label class="col-md-2 control-label">Destino</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>45 CONCEPCION</option>
+                                    <option>41 TALCA</option>
+                                </select>
+                            </div>
+                        </div>
+                        
+						
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Acciones:</label>
+                            <div class="col-md-9">
+                                <button type="submit" class="btn btn-sm btn-success">Consultar</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+            <!-- end panel -->
+        </div>
+        <div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Resultado Busqueda </h4>
+                </div>
+
+                <div class="panel-body">
+                    <table id="data-table" class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>Tienda</th>
+                            <th colspan=3>Bodega SO</th>
+							<th colspan=3>Bodega SS</th>
+							<th>Total Real</th>
+							<th>Total Transporte</th>							
+                        </tr>
+						<tr>
+                            <th> </th>
+                            <th>Drop</th>
+							<th>Pack and Hold</th>
+                            <th>Staging</th>
+							<th>Drop</th>
+							<th>Pack and Hold</th>
+                            <th>Staging</th>
+							
+                        </tr>
+                        </thead>
+                        <tbody>
+							<tr class="odd gradeX">
+								<td>Calama </td>
+								<td>5 </td>
+								<td>2 </td>
+								<td>10 </td>
+								<td>6 </td>
+								<td>5 </td>
+								<td>12 </td>
+								<td>40 </td>
+								<td>50 </td>
+								
+							</tr>
+							
+                        </tbody>
+                    </table>
+                    <!-- <div class="col-md-1"> -->
+                        <!-- <p> -->
+                            <!-- Acciones : -->
+                        <!-- </p> -->
+                    <!-- </div> -->
+                    <!-- <div class="col-md-6"> -->
+                        <!-- <p> -->
+                            <!-- <button class="btn btn-success" ui-sref="app.b2b.transportista.edita_of">Editar</button> -->
+							<!-- <button class="btn btn-danger" >Anular</button> -->
+							<!-- <button class="btn btn-info"  ui-sref="app.b2b.transportista.factura" >Cancelar</button> -->
+                        <!-- </p> -->
+                    <!-- </div> -->
+                </div>
+
+            </div>
+            <!-- end panel -->
+        </div>
+    </div>
+    <!-- end row -->
+</div>
