--- a/views/Consulta/Viajes/det_mod_original.html
+++ b/views/Consulta/Viajes/det_mod_original.html
@@ -62,7 +62,7 @@
                             </div>
                         </div>
 						
-						 <div class="form-group" style="display:none;" >
+						 <div class="form-group">
                             <label class="col-md-3 control-label">Usuario Objeta</label>
                             <div class="col-md-2">
                                 <input type="text" class="form-control" placeholder="José Pérez" />
@@ -73,31 +73,15 @@
                             </div>
                         </div>
 
-						<div class="form-group" style="display:none;" >
+						<div class="form-group">
                             <label class="col-md-3 control-label">Observaci&oacute;n Objeci&oacute;n</label>
                             <div class="col-md-6">
                                 <input type="text" class="form-control" placeholder="Se obejeto porque sí, autoriza E.Saavedra." />
                             </div>
                             
                         </div>
-						
-						<div class="form-group">
-                            <label class="col-md-3 control-label">Estado Viaje</label>
-                            <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="ESPERANDO CARGA" />
-                            </div>
-                            <label class="col-md-2 control-label">Patente</label>
-                            <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="CPPL-54" />
-                            </div>
-                        </div>
-                        
-						<div class="form-group">
-                            <label class="col-md-3 control-label">Tipo Viaje</label>
-                            <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="MOD" />
-                            </div>
-                        </div>
+
+                       
                     </form>
                 </div>
 
@@ -126,8 +110,7 @@
                             <th>Origen</th>
                             <th>Destino</th>
                             <th>Fecha MC</th>
-							
-							<th>Fecha_Viaje</th>
+							<th></th>
                         </tr>
                         </thead>
                         <tbody>
@@ -137,8 +120,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
                             <td>20/03/2017</td>
-<!-- <td><input type="checkbox" value="es"> </td> -->
-							<td>20/03/2017</td>
+<td><input type="checkbox" value="es"> </td>
                         </tr>
 						<tr class="odd gradeX">
                             <td>10022</td>
@@ -146,7 +128,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>40 TALCA</td>
                             <td>20/03/2017</td>
-							<td>20/03/2017</td>
+<td><input type="checkbox" value="es"> </td>
                         </tr>
 						<tr class="odd gradeX">
                             <td>10023</td>
@@ -154,7 +136,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
                             <td>20/03/2017</td>
-							<td>20/03/2017</td>
+<td><input type="checkbox" value="es"> </td>
                         </tr>
 						<tr class="odd gradeX">
                             <td>10024</td>
@@ -162,7 +144,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
                             <td>20/03/2017</td>
-							<td>20/03/2017</td>
+<td><input type="checkbox" value="es"> </td>
                         </tr>
                         
                         </tbody>
