--- a/views/Consulta/Viajes/det_troncal.html
+++ b/views/Consulta/Viajes/det_troncal.html
@@ -52,9 +52,9 @@
                         </div>
                         
                         <div class="form-group">
-                            <label class="col-md-3 control-label">Tarifa</label>
+                            <label class="col-md-3 control-label">Patente</label>
                             <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="369.000" />
+                                <input type="text" class="form-control" placeholder="CPPL-54" />
                             </div>
                             <label class="col-md-2 control-label">Fecha Viaje</label>
                             <div class="col-md-2">
@@ -62,7 +62,7 @@
                             </div>
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group" style="display:none;">
                             <label class="col-md-3 control-label">Usuario Objeta</label>
                             <div class="col-md-2">
                                 <input type="text" class="form-control" placeholder="José Pérez" />
@@ -73,10 +73,29 @@
                             </div>
                         </div>
 
-						<div class="form-group">
+						<div class="form-group" style="display:none;">
                             <label class="col-md-3 control-label">Observaci&oacute;n Objeci&oacute;n</label>
                             <div class="col-md-6">
                                 <input type="text" class="form-control" placeholder="Se obejeto porque sí, autoriza E.Saavedra." />
+                            </div>
+                            
+                        </div>
+						
+						<div class="form-group" >
+                            <label class="col-md-3 control-label">Tipo Cobro</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="CARGA SUELTA" />
+                            </div>
+                            <label class="col-md-2 control-label">Tipo Vehiculo</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="CM-" />
+                            </div>
+                        </div>
+						
+						<div class="form-group" >
+                            <label class="col-md-3 control-label">Estado Viaje</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="ESPERANDO CARGA" />
                             </div>
                             
                         </div>
@@ -137,15 +156,7 @@
                             <td>20/03/2017</td>
 <td><input type="checkbox" value="es"> </td>
                         </tr>
-						<tr class="odd gradeX">
-                            <td>10024</td>
-                            <td>ESPERANDO CARGA</td>
-                            <td>00 CD-SANTIAGO</td>
-                            <td>45 CONCEPCIÓN</td>
-                            <td>20/03/2017</td>
-<td><input type="checkbox" value="es"> </td>
-                        </tr>
-                        
+
                         </tbody>
                     </table>
                     <div class="col-md-1">
@@ -165,6 +176,51 @@
             </div>
             <!-- end panel -->
         </div>
+		
+		<div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Estados del Viaje</h4>
+                </div>
+
+                <div class="panel-body">
+                    <table id="data-table" class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>Fecha</th>
+                            <th>Estado</th>
+                            
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="odd gradeX">
+                            <td>20/03/2017</td>
+                            <td>CREADO</td>
+                            
+
+                        </tr>
+						<tr class="odd gradeX">
+                            <td>20/03/2017</td>
+                            <td>ESPERANDO CARGA</td>
+                            
+                        </tr>
+						
+                        </tbody>
+                    </table>
+                    
+                </div>
+
+            </div>
+            <!-- end panel -->
+        </div>
+		
     </div>
     <!-- end row -->
 </div>
