--- a/views/Consulta/Viajes/det_um_1.html
+++ b/views/Consulta/Viajes/det_um_1.html
@@ -8,7 +8,7 @@
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Detalle Viaje Movil Diario <small>Gestión de Consultas</small></h1>
+    <h1 class="page-header">Detalle Viaje Ultima Milla <small>Gestión de Consultas</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
@@ -24,7 +24,7 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Viaje Movil Diario</h4>
+                    <h4 class="panel-title">Viaje Ultima Milla</h4>
                 </div>
 
                 <div class="panel-body">
@@ -51,18 +51,30 @@
                             </div>
                         </div>
                         
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">Tarifa</label>
-                            <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="369.000" />
-                            </div>
-                            <label class="col-md-2 control-label">Fecha Viaje</label>
+						 <div class="form-group">
+                            <label class="col-md-3 control-label">Fecha Viaje</label>
                             <div class="col-md-2">
                                 <input type="text" class="form-control" placeholder="20/03/2017" />
                             </div>
+							
+							<label class="col-md-3 control-label">Estado Viaje</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="ESPERANDO CARGA" />
+                            </div>
                         </div>
 						
-						 <div class="form-group" style="display:none;" >
+						<div class="form-group">
+							<label class="col-md-3 control-label">Patente</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="CPPL-54" />
+                            </div>
+                            <label class="col-md-3 control-label">Tipo Viaje</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="MOD" />
+                            </div>
+                        </div>
+						
+						<div class="form-group" style="display:none;" >
                             <label class="col-md-3 control-label">Usuario Objeta</label>
                             <div class="col-md-2">
                                 <input type="text" class="form-control" placeholder="José Pérez" />
@@ -80,24 +92,7 @@
                             </div>
                             
                         </div>
-						
-						<div class="form-group">
-                            <label class="col-md-3 control-label">Estado Viaje</label>
-                            <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="ESPERANDO CARGA" />
-                            </div>
-                            <label class="col-md-2 control-label">Patente</label>
-                            <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="CPPL-54" />
-                            </div>
-                        </div>
-                        
-						<div class="form-group">
-                            <label class="col-md-3 control-label">Tipo Viaje</label>
-                            <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="MOD" />
-                            </div>
-                        </div>
+                       
                     </form>
                 </div>
 
@@ -121,48 +116,46 @@
                     <table id="data-table" class="table table-striped table-bordered">
                         <thead>
                         <tr>
-                            <th>MC</th>
-                            <th>Estado MC</th>
-                            <th>Origen</th>
-                            <th>Destino</th>
-                            <th>Fecha MC</th>
-							
-							<th>Fecha_Viaje</th>
+                            <th>Boleta</th>
+                            <th>Estado Boleta</th>
+                            <th>ND</th>
+                            <th>Estado ND</th>
+                            <th>Tarifa</th>
+							<th>&nbsp;</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr class="odd gradeX">
                             <td>10021</td>
-                            <td>ESPERANDO CARGA</td>
-                            <td>00 CD-SANTIAGO</td>
-                            <td>45 CONCEPCIÓN</td>
-                            <td>20/03/2017</td>
-<!-- <td><input type="checkbox" value="es"> </td> -->
-							<td>20/03/2017</td>
+                            <td>Cerrada</td>
+							<td>5050</td>
+                            <td>Entregado</td>
+                            <td><input type="text" class="form-control" placeholder="5.990" /></td>
+							<td><input type="checkbox" value="es"> </td>
                         </tr>
 						<tr class="odd gradeX">
                             <td>10022</td>
-                            <td>ESPERANDO CARGA</td>
-                            <td>00 CD-SANTIAGO</td>
-                            <td>40 TALCA</td>
-                            <td>20/03/2017</td>
-							<td>20/03/2017</td>
+                            <td>Cerrada</td>
+							<td>5051</td>
+                            <td>Entregado</td>
+                            <td><input type="text" class="form-control" placeholder="3.990" /></td>
+							<td><input type="checkbox" value="es"> </td>
                         </tr>
 						<tr class="odd gradeX">
                             <td>10023</td>
-                            <td>ESPERANDO CARGA</td>
-                            <td>00 CD-SANTIAGO</td>
-                            <td>45 CONCEPCIÓN</td>
-                            <td>20/03/2017</td>
-							<td>20/03/2017</td>
+                            <td>Cerrada</td>
+							<td>5052</td>
+                            <td>Entregado</td>
+                            <td><input type="text" class="form-control" placeholder="5.990" /></td>
+							<td><input type="checkbox" value="es"> </td>
                         </tr>
 						<tr class="odd gradeX">
                             <td>10024</td>
-                            <td>ESPERANDO CARGA</td>
-                            <td>00 CD-SANTIAGO</td>
-                            <td>45 CONCEPCIÓN</td>
-                            <td>20/03/2017</td>
-							<td>20/03/2017</td>
+                            <td>Cerrada</td>
+							<td>5053</td>
+                            <td>Entregado</td>
+                            <td><input type="text" class="form-control" placeholder="3.990" /></td>
+							<td><input type="checkbox" value="es"> </td>
                         </tr>
                         
                         </tbody>
