--- a/views/Facturacion/Aprobacion/apre.html
+++ b/views/Facturacion/Aprobacion/apre.html
@@ -4,13 +4,13 @@
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
-        <li><a href="javascript:;">Facturación</a></li>
-        <li><a href="javascript:;">Aprueba Orden de Facturación</a></li>
-        <li class="active">20101 - Aprueba Orden de Facturación SEV</li>
+        <li><a href="javascript:;">Facturaci&oacute;n</a></li>
+        <li><a href="javascript:;">Aprueba </a></li>
+        <li class="active">20101 - Aprueba Orden de Facturaci&oacute;n</li>
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <!-- <h1 class="page-header">Aprueba Orden de Facturación <small>Gestión de Facturación</small></h1> -->
+    <!-- <h1 class="page-header">Aprueba OF <small>Gesti&oacute;n de Facturaci&oacute;n</small></h1> -->
     <!-- end page-header -->
 
     <!-- begin row -->
@@ -24,7 +24,7 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Aprueba / Rechaza  Orden de Facturación</h4>
+                    <h4 class="panel-title">Aprueba / Rechaza  Orden de Facturaci&oacute;n</h4>
                 </div>
 
                 <div class="panel-body">
@@ -40,55 +40,61 @@
                             </div>
                         </div>
 
-                        
-                        
                         <div class="form-group">
                             <label class="col-md-3 control-label">N&uacute;mero de Viaje</label>
                             <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="21365" />
+                                <input type="text" class="form-control" placeholder="10021" />
                             </div>
                             <label class="col-md-3 control-label">Tipo de Viaje</label>
                             <div class="col-md-3">
-                                <input type="text" class="form-control" placeholder="SEV" readonly="readonly" />
+                                <input type="text" class="form-control" placeholder="UM" readonly="readonly" />
                             </div>
                         </div>
-						
-						
 
-                         <div class="form-group">
+						
+						
+						<div class="form-group">
 							
                             <!-- <label class="col-md-3 control-label">Acciones:</label> -->
                             <div class="col-md-12"> 
                                 <!-- <button type="submit" class="btn btn-sm btn-success">Buscar</button> -->
-								<table id="data-table" class="table table-striped table-bordered ">
-									<thead>
-									<tr>
-										<th>Viaje</th>
-										<th>Tipo SEV</th>
-										<th>Viaje Asociado</th>
-										<th>Tipo Cobro</th>
-										<th>Fecha Viaje</th>
-										<th>Fecha Cierre</th>
-										<th>Responsable</th>
-										<th>Unidades</th>		
-										<th>Tarifa</th>
-									</tr>
-									</thead>
-									<tbody>
-									<tr class="odd gradeX">
-										<td><a href="../../carga_todos.html">21365</a></td>
-										<td>ESCOLTA</td>
-										<td>21360</td>
-										<td>CARGA COMPLETA</td>
-										<td>20/03/2017</td>
-										<td>20/03/2017</td>
-										<td>Bartolomeo Murdock</td>
-										<td>1</td>
-										<td>10.990</td>
-									</tr>
-									
-									</tbody>
-								</table>
+								 <table id="data-table" class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>N&deg; Viaje</th>
+							<th>Tipo Viaje</th>
+                            <th>Origen</th>
+                            <th>Destino</th>
+                            <th>Tipo Cobro</th>
+							<th>Fecha Viaje</th>
+							<th>NS</th>
+							<th>Monto</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="odd gradeX">
+                            <td><a href="../../carga_todos.html">214222</a></td>
+                            <td>UM</td>
+							<td>00 CD-SANTIAGO</td>
+                            <td>45 CONCEPCI&Oacute;N</td>
+                            <td>CARGA COMPLETA</td>
+							<td>20/03/2017</td>
+							<td>1</td>
+							<td>3990</td>
+                        </tr>
+						<tr class="odd gradeX">
+                            <td><a href="../../carga_todos.html">214223</a></td>
+                            <td>UM</td>
+							<td>00 CD-SANTIAGO</td>
+                            <td>45 CONCEPCI&Oacute;N</td>
+                            <td>CARGA COMPLETA</td>
+							<td>20/03/2017</td>
+							<td>1</td>
+							<td>3990</td>
+                        </tr>
+                        
+                        </tbody>
+                    </table>
                             </div> 
                         </div>
 						
@@ -106,7 +112,7 @@
                                 <button type="submit" class="btn btn-sm btn-success">Aprobar</button>
 								&nbsp;
 								<!-- <button type="submit" class="btn btn-sm btn-info" ng-click="bootbox.prompt('This is the default prompt!', function(result){ console.log(result); });" >Rechazar</button>	 -->
-								<button class="btn btn-sm btn-danger " ng-click="PRO_RECHA_Orden de Facturación_OBJ()">Rechazar</button>
+								<button class="btn btn-sm btn-danger " ng-click="PRO_RECHA_OF_OBJ()">Rechazar</button>
 &nbsp;
 								<!-- <button type="submit" class="btn btn-sm btn-info">Cancelar</button>								 -->
 								<a ui-sref="app.facturacion.aprobacion.aprueba" class="btn btn-sm btn-info">Cancelar</a>								
